--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.1.0",
     "gatsby": "^2.13.70",
     "gatsby-image": "^2.2.9",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
